# aoc

./: .gitignore  CMakeLists.txt
1/: p1.cpp  p2.cpp
10/: a.cpp  b.cpp
11/: a.cpp  b.cpp
12/: a.cpp  b.cpp
13/: a.cpp  b.cpp  tests.cpp
14/: a.cpp  b.cpp  collections.h  output.txt
15/: a.cpp  b.cpp  collections.h
16/: a.cpp  ab_v2.cpp  b.cpp  collections.h  graph_search.h  grid.h
17/: a.cpp  a_2.cpp  b.cpp
18/: a.cpp  b.cpp  b_2.cpp  grid.h
19/: a.cpp  b.cpp
2/: a.cpp  b.cpp  graph_search.h
20/: a.cpp  b.cpp  grid.h  tests.cpp
2015/01/: a.cpp  b.cpp
2015/02/: a.cpp  b.cpp  numbers.h
2015/03/: a.cpp  b.cpp
2015/05/: a.cpp  b.cpp
2015/09/: a.cpp  b.cpp
2015/10/: a.cpp  b.cpp
2015/12/: a.cpp  b.cpp
2015/13/: a.cpp  b.cpp  parse.h
2015/18/: a.cpp  b.cpp
2016/01/: a.cpp  b.cpp
2016/02/: a.cpp  b.cpp  collections.h
2016/08/: a.cpp  b.cpp  graph_search.h  grid.h
2016/13/: a.cpp  b.cpp
2016/19/: a.cpp  b.cpp
2016/20/: a.cpp  b.cpp
2016/24/: a.cpp  b.cpp
2019/01/: a.cc  b.cc
2020/03/: a.cpp  b.cpp
2020/11/: a.cpp  b.cpp
21/: a.cpp  b.cpp
22/: a.cpp  b.cpp  collections.h  tests.cpp
23/: a.cpp  b.cpp
24/: a.cpp  b.cpp
25/: a.cpp
3/: a.cpp  b.cpp
4/: a.cpp  b.cpp  grid.h
5/: a.cpp  b.cpp  graph_search.h
6/: a.cpp  b.cpp  b_2.cpp  collections.h  graph_search.h  grid.h
7/: a.cpp  b.cpp
8/: a.cpp  b.cpp  grid.h  lex.h  parse.h
9/: a.cpp  b.cpp
include/: graph_search.h  grid.h  numbers.h
template/: a.cpp  collections.h  graph_search.h  grid.h  input.txt  numbers.h  rational.h  tests.cpp
(+160 files in other folders)
